--- a/main.html
+++ b/main.html
@@ -11,6 +11,16 @@
     <script type="text/javascript" src="./script.js">
 </script>
 
+	<header>
+		<nav>
+			<a href="#">Home</a>
+			<a href="#">About us</a>
+			<a href="#">Contact us</a>
+		</nav>
+	</header>
+	<video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" controls alt="vid"></video>
+	<video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" controls alt="vid"></video>
+	<video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/SubaruOutbackOnStreetAndDirt.mp4" controls alt="vid"></video>
 </body>
 
 </html>
