--- a/main.html
+++ b/main.html
@@ -18,9 +18,15 @@
 			<a href="#">Contact us</a>
 		</nav>
 	</header>
-	<video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" controls alt="vid"></video>
-	<video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" controls alt="vid"></video>
-	<video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/SubaruOutbackOnStreetAndDirt.mp4" controls alt="vid"></video>
+	<h1>3 random videos</h1>
+	<ul>
+		<li><video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" controls alt="vid"></video></li>
+		<li><video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" controls alt="vid"></video></li>
+		<li><video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/SubaruOutbackOnStreetAndDirt.mp4" controls alt="vid"></video></li>
+	</ul>
+	
+	
+	
 </body>
 
 </html>
