--- a/main.html
+++ b/main.html
@@ -13,20 +13,32 @@
 
 	<header>
 		<nav>
-			<a href="#">Home</a>
-			<a href="#">About us</a>
-			<a href="#">Contact us</a>
+			<ul>
+				<li><a href="#">Home</a></li>
+				<li><a href="#">About us</a></li>
+				<li><a href="#">Contact us</a></li>
+			</ul>
+			
 		</nav>
 	</header>
 	<h1>3 random videos</h1>
-	<ul>
+<!-- 	<ul>
 		<li><video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" controls alt="vid"></video></li>
 		<li><video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" controls alt="vid"></video></li>
 		<li><video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/SubaruOutbackOnStreetAndDirt.mp4" controls alt="vid"></video></li>
-	</ul>
+	</ul> -->
 	
-	
-	
+	<video controls>
+	  <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/ogg">
+	  
+	</video>
+	<video controls>
+		<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/ogg">
+	  
+	</video>
+	<video controls>
+	<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/SubaruOutbackOnStreetAndDirt.mp4" type="video/ogg">
+	</video>
 </body>
 
 </html>
